--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -29,8 +29,9 @@ jobs:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ github.run_id }}
           restore-keys: |
+            ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-
             ${{ runner.os }}-go-
 
       - name: Install dependencies
@@ -49,7 +50,9 @@ jobs:
 
       - name: Run staticcheck
         run: |
-          go install honnef.co/go/tools/cmd/staticcheck@latest
+          if ! command -v staticcheck &> /dev/null; then
+            go install honnef.co/go/tools/cmd/staticcheck@latest
+          fi
           staticcheck ./...
 
       - name: Run tests
@@ -108,7 +111,7 @@ jobs:
 
       - name: Update image tag in deployment
         run: |
-          cd gitops/ids
+          cd gitops/ids-backend
           IMAGE_TAG="${GITHUB_REF_NAME}-${GITHUB_SHA::7}"
           sed -i "s|image: .*ids-backend:.*|image: ${{ secrets.ACR_REGISTRY_NAME }}.azurecr.io/ids-backend:${IMAGE_TAG}|g" deployment.yaml
           
