--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -28,8 +28,8 @@ jobs:
         with:
           go-version: '1.25'
 
-      - name: Cache Go modules
-        uses: actions/cache@v4
+      - name: Restore Go modules cache
+        uses: actions/cache/restore@v4
         with:
           path: |
             ~/.cache/go-build
@@ -37,7 +37,6 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-
-          save-always: true
 
       - name: Install dependencies
         run: |
@@ -61,6 +60,15 @@ jobs:
             go install honnef.co/go/tools/cmd/staticcheck@latest
           fi
           staticcheck ./...
+
+      - name: Save Go modules cache
+        if: always()
+        uses: actions/cache/save@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ github.sha }}
 
       - name: Run tests
         run: go test -v ./...
