feat: Update environment configuration and enhance Swagger documentation
- Added `WAIT_FOR_TUNNEL` configuration option to `.env.example` for controlling SSH tunnel behavior.
- Removed outdated `CHATBOT_API.md` documentation file.
- Updated `Dockerfile` to install Swagger generation tools and automate documentation generation.
- Enhanced Swagger annotations for various API endpoints, including health checks and chat functionality.
- Improved response models with example values for better clarity in Swagger UI.
- Updated Makefile to include a target for generating Swagger documentation.

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -61,6 +61,12 @@ jobs:
           fi
           staticcheck ./...
 
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: latest
+          args: --timeout=5m
+
       - name: Save Go modules cache
         if: always()
         uses: actions/cache/save@v4
