--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ OPENAI_API_KEY=your_openai_api_key_here
 
 # Cache Configuration
 PRODUCT_CACHE_TTL=10
+
+# Tunnel Configuration
+WAIT_FOR_TUNNEL=false
