--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
-          version: latest
+          version: v1.61
           args: --timeout=5m
 
       - name: Save Go modules cache
