--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -62,8 +62,9 @@ jobs:
           staticcheck ./...
 
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v8
+        uses: golangci/golangci-lint-action@v6
         with:
+          version: v1.64.8
           args: --timeout=5m
 
       - name: Save Go modules cache
