--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -77,7 +77,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.ACR_REGISTRY_NAME }}.azurecr.io/ids-backend
+          images: ${{ secrets.ACR_REGISTRY_NAME }}.azurecr.io/ids
           tags: |
             type=sha,prefix={{branch}}-
             type=raw,value=latest
@@ -106,9 +106,9 @@ jobs:
 
       - name: Update image tag in deployment
         run: |
-          cd gitops/ids-backend
+          cd gitops/ids
           IMAGE_TAG="${GITHUB_REF_NAME}-${GITHUB_SHA::7}"
-          sed -i "s|image: .*ids-backend:.*|image: ${{ secrets.ACR_REGISTRY_NAME }}.azurecr.io/ids-backend:${IMAGE_TAG}|g" deployment.yaml
+          sed -i "s|image: .*ids:.*|image: ${{ secrets.ACR_REGISTRY_NAME }}.azurecr.io/ids:${IMAGE_TAG}|g" deployment.yaml
           
       - name: Commit and push changes
         run: |
@@ -116,5 +116,5 @@ jobs:
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git add .
-          git commit -m "Update IDS backend image to ${GITHUB_SHA::7}" || echo "No changes to commit"
+          git commit -m "Update IDS image to ${GITHUB_SHA::7}" || echo "No changes to commit"
           git push
