--- a/.github/workflows/ids.yml
+++ b/.github/workflows/ids.yml
@@ -44,12 +44,11 @@ jobs:
       - name: Run go vet
         run: go vet ./...
 
-      - name: Run staticcheck
-        run: |
-          if ! command -v staticcheck &> /dev/null; then
-            go install honnef.co/go/tools/cmd/staticcheck@latest
-          fi
-          staticcheck ./...
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v2.6.2
+          args: --timeout=5m
 
       - name: Run tests
         run: go test -v -race -coverprofile=coverage.out -covermode=atomic ./...
