--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,26 +1,11 @@
-version: 2
+version: "2"
 
 run:
   timeout: 5m
   modules-download-mode: readonly
 
-linters-settings:
-  govet:
-    shadow: true
-  gocyclo:
-    min-complexity: 15
-  dupl:
-    threshold: 100
-  goconst:
-    min-len: 2
-    min-occurrences: 2
-  misspell:
-    locale: US
-  lll:
-    line-length: 140
-
 linters:
-  disable-all: true
+  default: none
   enable:
     - errcheck
     - govet
@@ -31,12 +16,25 @@ linters:
     - goconst
     - gocyclo
     - dupl
+  exclusions:
+    paths:
+      - ".*_test.go$"
+    warn-unused: false
+  settings:
+    govet:
+      shadow: true
+    gocyclo:
+      min-complexity: 15
+    dupl:
+      threshold: 100
+    goconst:
+      min-len: 2
+      min-occurrences: 2
+    misspell:
+      locale: US
+    lll:
+      line-length: 140
 
 issues:
-  exclude-rules:
-    - path: _test\.go
-      linters:
-        - gocyclo
-        
   max-issues-per-linter: 50
   max-same-issues: 3
