--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -9,6 +9,11 @@ on:
         required: false
         default: 'https://ids.jshipster.io'
         type: string
+      support_email:
+        description: 'Email address for support escalation test'
+        required: false
+        default: 'elad@jshipster.io'
+        type: string
       run_full_suite:
         description: 'Run full test suite (slower, more comprehensive)'
         required: false
@@ -54,15 +59,17 @@ jobs:
       - name: Run E2E Tests
         env:
           E2E_BASE_URL: ${{ inputs.base_url || 'https://ids.jshipster.io' }}
+          E2E_SUPPORT_EMAIL: ${{ inputs.support_email || 'elad@jshipster.io' }}
           E2E_HEADLESS: 'true'
         run: |
           echo "Running E2E tests against: $E2E_BASE_URL"
+          echo "Support email test will use: $E2E_SUPPORT_EMAIL"
           if [ "${{ inputs.run_full_suite }}" = "true" ]; then
             echo "Running full test suite..."
             go test -v -timeout 10m ./e2e/...
           else
-            echo "Running quick test suite..."
-            go test -v -timeout 5m -run "TestAppLoads|TestConnectionStatus|TestChatInteraction" ./e2e/...
+            echo "Running quick test suite (core + support email)..."
+            go test -v -timeout 5m -run "TestAppLoads|TestConnectionStatus|TestChatInteraction|TestSupportEmailFeature" ./e2e/...
           fi
 
       - name: Upload test artifacts on failure
