Enhance E2E testing setup by adding build tags and updating test commands
- Updated GitHub Actions workflow to include the "e2e" build tag for running end-to-end tests.
- Modified E2E test file to specify the "e2e" build tag requirement for execution.
- Ensured that both full and quick test suites utilize the "e2e" tag for consistency in testing.

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -66,10 +66,10 @@ jobs:
           echo "Support email test will use: $E2E_SUPPORT_EMAIL"
           if [ "${{ inputs.run_full_suite }}" = "true" ]; then
             echo "Running full test suite..."
-            go test -v -timeout 10m ./e2e/...
+            go test -v -tags=e2e -timeout 10m ./e2e/...
           else
             echo "Running quick test suite (core + support email)..."
-            go test -v -timeout 5m -run "TestAppLoads|TestConnectionStatus|TestChatInteraction|TestSupportEmailFeature" ./e2e/...
+            go test -v -tags=e2e -timeout 5m -run "TestAppLoads|TestConnectionStatus|TestChatInteraction|TestSupportEmailFeature" ./e2e/...
           fi
 
       - name: Upload test artifacts on failure
