--- a/.github/workflows/ids.yml
+++ b/.github/workflows/ids.yml
@@ -8,9 +8,9 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+    paths-ignore:
+      - 'hostapp/**'
+      - 'docs/**'
 
 jobs:
   test:
